      in overflow mode (LP: #427035)
  * data/glade/UpdateManager.ui:
    - remove dialog title for the battery warning and fix button
      order (thanks to Matthew Paul Thomas)
  * data/glade/UpdateManager.ui:
    - fix duplicated accelerator keys (LP: #425817)
  * UpdateManager/UpdateManager.py:
    - close app when ESC is pressed in the battery warning

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 14 Sep 2009 13:24:14 +0200

update-manager (1:0.125.1) karmic; urgency=low

  [ Josh Holland ]
  * Fixed several typos (LP: #93804, LP: #277731, LP: #404435)
  
  [ Rugby471 ]
  * Center window on the screen (LP: #423355)
  
  [ Michael Vogt ]
  * DistUpgrade/DistUpgrade.ui:
    - remove unused "destroy_event" handler (LP: #428842)
    - remove unused handlers to avoid RunTime warning
  * DistUpgrade/DistUpgradeQuirks.py:
    - make ARMv6 error message clearer (LP: #409523)
  * UpdateManager/Core/MetaRelease.py:
    - more robustness for invalid configuration of the meta-release
      file (LP: #428558)
    - more robustness if the server sends invalid meta-release data
  * UpdateManager/GtkProgress.py:
    - make button_cancel click event work
    - add sensible default width
  * DistUpgrade/DistUpgradeCache.py:
    - fix crash in partial upgrade (LP: #428203)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 14 Sep 2009 12:01:41 +0200

update-manager (1:0.125) karmic; urgency=low

  [ Michael Vogt ]
  * integrate base-installer as a sub-component into the
    release upgrader and use the base-installer/kernel/*.sh
    functionality to ensure we select the most appropriate
    kernel on upgrade (LP: #353545)
  * integrate automatic updates to base-installer into the
    pre-build.sh bzr hook
  * UpdateManager/Core/UpdateList.py, UpdateManager/UpdateManager.py:
    - filter warnings
  * UpdateManager/SimpleGtkbuilderApp.py:
    - use logging instead of sys.stderr
  * data/glade/UpdateManager.ui:
    - set explicit translation domain