@@ -11,6 +11,9 @@ update-manager (1:0.125.2) UNRELEASEDkarmic; urgency=low
     - fix duplicated accelerator keys (LP: #425817)
   * UpdateManager/UpdateManager.py:
     - close app when ESC is pressed in the battery warning
+  * UpdateManager/UpdateManager.py:
+    - ensure that the changelog always matches the currently selected
+      pkg by fixing race during download (LP: #424918) 
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 14 Sep 2009 13:24:14 +0200
 
